// ========================================
// MEDI-TRACK - ESQUEMA SIMPLIFICADO CON PRN COMPLETO
// Soporte completo para dosificación PRN y programada
// Con ventanas de tolerancia y criterios específicos
// ========================================

// ==========================================
// SISTEMA DE USUARIOS Y ROLES (Mantener existente)
// ==========================================

Table roles {
  id int [pk, increment]
  nombre varchar(50) [unique, not null]
  descripcion text
  activo boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Roles: admin, medico, cuidador, apoderado, paciente'
}

Table permisos {
  id int [pk, increment]
  nombre varchar(50) [unique, not null]
  descripcion text
  modulo varchar(50)
  
  Note: 'Permisos específicos del sistema'
}

Table rol_permisos {
  rol_id int [ref: > roles.id]
  permiso_id int [ref: > permisos.id]
  
  indexes {
    (rol_id, permiso_id) [pk]
  }
}

Table usuarios {
  id int [pk, increment]
  nombre varchar(100) [not null]
  email varchar(100) [unique, not null]
  password varchar(255) [not null]
  telefono varchar(20)
  rol_id int [not null, ref: > roles.id]
  activo boolean [default: true]
  email_verificado boolean [default: false]
  ultimo_acceso timestamp
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

// Tipos de usuarios específicos
Table personal_medico {
  usuario_id int [pk, ref: - usuarios.id]
  especialidad varchar(100)
  numero_colegiatura varchar(50) [unique]
  institucion varchar(100)
  anos_experiencia int
}

Table cuidadores {
  usuario_id int [pk, ref: - usuarios.id]
  certificaciones text
  experiencia_anos int
  disponibilidad_horaria varchar(100)
  tarifa_hora decimal(8,2)
}

Table apoderados {
  usuario_id int [pk, ref: - usuarios.id]
  relacion_paciente varchar(50)
  es_contacto_emergencia boolean [default: true]
}

Table pacientes {
  id int [pk, increment]
  usuario_id int [ref: > usuarios.id, note: 'Opcional - paciente puede no tener cuenta']
  nombre varchar(100) [not null]
  fecha_nacimiento date
  genero_id char(1) [ref: > generos.id]
  numero_documento varchar(20) [unique]
  tipo_documento varchar(10)
  tipo_sangre varchar(10)
  altura decimal(5,2)
  direccion text
  telefono_emergencia varchar(20)
  observaciones_medicas text
  activo boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table generos {
  id char(1) [pk]
  nombre varchar(20) [unique, not null]
  
  Note: 'M: Masculino, F: Femenino, O: Otro'
}

// Relaciones entre usuarios
Table paciente_apoderados {
  paciente_id int [ref: > pacientes.id]
  apoderado_usuario_id int [ref: > apoderados.usuario_id]
  es_principal boolean [default: false]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    (paciente_id, apoderado_usuario_id) [pk]
  }
}

Table paciente_cuidadores {
  paciente_id int [ref: > pacientes.id]
  cuidador_usuario_id int [ref: > cuidadores.usuario_id]
  fecha_asignacion date [not null]
  fecha_fin date
  activo boolean [default: true]
  
  indexes {
    (paciente_id, cuidador_usuario_id) [pk]
  }
}

Table paciente_medicos {
  paciente_id int [ref: > pacientes.id]
  medico_usuario_id int [ref: > personal_medico.usuario_id]
  es_medico_principal boolean [default: false]
  fecha_asignacion date [not null]
  fecha_fin date
  especialidad_tratamiento varchar(100)
  
  indexes {
    (paciente_id, medico_usuario_id) [pk]
  }
}

// ==========================================
// SISTEMA DE MEDICAMENTOS SIMPLIFICADO
// ==========================================

Table medicamentos {
  id int [pk, increment]
  nombre varchar(255) [not null]
  principio_activo varchar(255)
  concentracion varchar(100)
  forma_farmaceutica varchar(100)
  via_administracion varchar(100)
  laboratorio varchar(100)
  descripcion text
  activo boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Tabla simplificada de medicamentos - fácil de usar'
}

// ==========================================
// CATÁLOGOS DE SÍNTOMAS E INDICACIONES PRN
// ==========================================

Table sintomas_prn {
  id int [pk, increment]
  nombre varchar(100) [unique, not null]
  categoria varchar(50) [not null]
  descripcion text
  activo boolean [default: true]
  
  Note: 'Catálogo de síntomas para indicaciones PRN: dolor, fiebre, ansiedad, náuseas, etc.'
}

Table criterios_prn {
  id int [pk, increment]
  sintoma_id int [not null, ref: > sintomas_prn.id]
  descripcion varchar(255) [not null]
  valor_minimo varchar(50)
  valor_maximo varchar(50)
  unidad varchar(20)
  
  Note: 'Criterios específicos: fiebre >38°C, dolor >7/10, etc.'
}

// ==========================================
// SISTEMA DE TRATAMIENTOS SIMPLIFICADO
// ==========================================

Table tratamientos {
  id int [pk, increment]
  paciente_id int [not null, ref: > pacientes.id]
  medico_usuario_id int [ref: > personal_medico.usuario_id]
  nombre varchar(100) [not null]
  diagnostico varchar(200)
  tipo enum('Programado', 'PRN') [default: 'Programado']
  estado enum('Activo', 'Pausado', 'Completado', 'Suspendido') [default: 'Activo']
  fecha_inicio date [not null]
  fecha_fin_estimada date
  fecha_fin_real date
  observaciones text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Tratamientos - Programado (horarios fijos) o PRN (según necesidad)'
}

Table medicamentos_tratamientos {
  id int [pk, increment]
  medicamento_id int [not null, ref: > medicamentos.id]
  tratamiento_id int [not null, ref: > tratamientos.id]
  dosis_cantidad decimal(10,3) [not null]
  unidad_dosis varchar(50) [not null]
  
  // Configuración para PROGRAMADOS
  frecuencia_horas int [note: 'Solo para programados: cada cuántas horas']
  tolerancia_antes_minutos int [default: 30, note: 'Ventana antes del horario']
  tolerancia_despues_minutos int [default: 60, note: 'Ventana después del horario']
  
  // Configuración para PRN
  intervalo_minimo_horas int [note: 'PRN: tiempo mínimo entre dosis']
  dosis_maxima_dia decimal(10,3) [note: 'PRN: máximo por día']
  dosis_maxima_consecutiva int [note: 'PRN: máximo seguidas sin pausa']
  
  // Datos generales
  duracion_dias int
  fecha_inicio date [not null]
  fecha_fin date
  indicaciones_uso text
  activo boolean [default: true]
  orden int [default: 1]
  
  Note: 'Medicamentos en tratamientos - configuración unificada'
}

// ==========================================
// INDICACIONES ESPECÍFICAS PRN
// ==========================================

Table indicaciones_prn {
  id int [pk, increment]
  medicamento_tratamiento_id int [not null, ref: > medicamentos_tratamientos.id]
  sintoma_id int [not null, ref: > sintomas_prn.id]
  criterio_id int [ref: > criterios_prn.id]
  descripcion_personalizada text
  es_criterio_principal boolean [default: false]
  
  indexes {
    (medicamento_tratamiento_id, sintoma_id) [unique]
  }
  
  Note: 'Síntomas e indicaciones específicas para administrar PRN'
}

// ==========================================
// SISTEMA DE HORARIOS Y ADMINISTRACIÓN
// ==========================================

Table horarios_programados {
  id int [pk, increment]
  medicamento_tratamiento_id int [not null, ref: > medicamentos_tratamientos.id]
  paciente_id int [not null, ref: > pacientes.id]
  hora_programada time [not null]
  dias_semana varchar(20) [not null, note: 'L,M,X,J,V,S,D o Daily']
  fecha_inicio date [not null]
  fecha_fin date
  activo boolean [default: true]
  
  Note: 'Horarios específicos para medicamentos programados únicamente'
}

Table administraciones {
  id int [pk, increment]
  medicamento_tratamiento_id int [not null, ref: > medicamentos_tratamientos.id]
  horario_programado_id int [ref: > horarios_programados.id, note: 'NULL para PRN']
  paciente_id int [not null, ref: > pacientes.id]
  cuidador_usuario_id int [ref: > cuidadores.usuario_id]
  
  // Tiempos
  fecha_hora_programada timestamp [note: 'NULL para PRN']
  fecha_hora_administrada timestamp [not null]
  
  // Datos de administración
  dosis_administrada decimal(10,3) [not null]
  estado enum('Administrada', 'Omitida', 'Tardía') [default: 'Administrada']
  es_dentro_ventana_tolerancia boolean [default: true]
  minutos_diferencia int [note: 'Diferencia respecto al horario programado']
  
  // Datos específicos PRN
  sintoma_reportado_id int [ref: > sintomas_prn.id, note: 'Síntoma que motivó la administración PRN']
  intensidad_sintoma varchar(20) [note: 'Escala del síntoma: leve, moderado, severo o valor numérico']
  criterio_cumplido text [note: 'Descripción del criterio cumplido para PRN']
  
  // Observaciones
  observaciones text
  efectos_adversos text
  
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Registro unificado - programadas (con horario) y PRN (por síntoma)'
}

// ==========================================
// SISTEMA DE ALERTAS SIMPLIFICADO
// ==========================================

Table alertas {
  id int [pk, increment]
  paciente_id int [not null, ref: > pacientes.id]
  tratamiento_id int [ref: > tratamientos.id]
  administracion_id int [ref: > administraciones.id]
  tipo enum('Dosis_Omitida', 'Fuera_Ventana', 'Exceso_PRN', 'Intervalo_Corto_PRN', 'Efecto_Adverso') [not null]
  nivel enum('Info', 'Advertencia', 'Critica') [default: 'Info']
  mensaje text [not null]
  fecha_generada timestamp [default: `CURRENT_TIMESTAMP`]
  revisada boolean [default: false]
  revisada_por int [ref: > usuarios.id]
  fecha_revision timestamp
  
  Note: 'Alertas del sistema incluyendo validaciones PRN'
}

// ==========================================
// TABLAS PARA DASHBOARD Y ANALYTICS
// ==========================================

Table estadisticas_consumo {
  id int [pk, increment]
  paciente_id int [not null, ref: > pacientes.id]
  medicamento_id int [not null, ref: > medicamentos.id]
  periodo_inicio date [not null]
  periodo_fin date [not null]
  tipo_periodo enum('Diario', 'Semanal', 'Mensual') [not null]
  
  // Métricas de adherencia
  dosis_programadas int [default: 0]
  dosis_administradas int [default: 0]
  dosis_omitidas int [default: 0]
  dosis_tardias int [default: 0]
  dosis_prn int [default: 0]
  
  // Métricas PRN específicas
  administraciones_prn_por_sintoma json [note: 'Contador por tipo de síntoma']
  promedio_intensidad_sintomas decimal(3,1) [note: 'Intensidad promedio de síntomas PRN']
  
  // Métricas de calidad
  adherencia_porcentaje decimal(5,2) [note: 'administradas/programadas * 100']
  puntualidad_porcentaje decimal(5,2) [note: 'dentro ventana/administradas * 100']
  
  // Consumo total
  cantidad_total_administrada decimal(10,3)
  unidad varchar(50)
  
  calculated_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    (paciente_id, medicamento_id, periodo_inicio, tipo_periodo) [unique]
  }
  
  Note: 'Estadísticas precalculadas incluyendo métricas PRN'
}

Table resumen_adherencia_paciente {
  id int [pk, increment]
  paciente_id int [not null, ref: > pacientes.id]
  fecha date [not null]
  
  // Resumen general del día
  total_medicamentos_activos int [default: 0]
  total_dosis_programadas int [default: 0]
  total_dosis_administradas int [default: 0]
  total_dosis_omitidas int [default: 0]
  total_dosis_prn int [default: 0]
  
  // Resumen PRN específico
  sintomas_mas_frecuentes json [note: 'Top 3 síntomas del día']
  total_medicamentos_prn_activos int [default: 0]
  
  // Indicadores de calidad
  adherencia_general_porcentaje decimal(5,2)
  puntualidad_general_porcentaje decimal(5,2)
  
  calculated_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    (paciente_id, fecha) [unique]
  }
  
  Note: 'Resumen diario incluyendo actividad PRN'
}

// ==========================================
// CASOS DE USO PRN Y PROGRAMADO
// ==========================================

Note: '''
EJEMPLOS DE CONFIGURACIÓN:

1. **MEDICAMENTO PROGRAMADO**:
   Tratamiento: "Antibiótico cada 8 horas"
   - tipo: Programado
   - frecuencia_horas: 8
   - tolerancia_antes_minutos: 30
   - tolerancia_despues_minutos: 60
   - horarios_programados: 08:00, 16:00, 00:00

2. **MEDICAMENTO PRN**:
   Tratamiento: "Paracetamol PRN para fiebre >38°C"
   - tipo: PRN
   - intervalo_minimo_horas: 8
   - dosis_maxima_dia: 3000 (mg)
   - Indicación PRN:
     * sintoma: "Fiebre"
     * criterio: ">38°C"
     * descripcion_personalizada: "Administrar para fiebre superior a 38°C o dolor moderado"

3. **ADMINISTRACIÓN PRN**:
   - sintoma_reportado_id: "Fiebre"
   - intensidad_sintoma: "38.5°C"
   - criterio_cumplido: "Temperatura 38.5°C > criterio 38°C"
   - Sistema valida automáticamente intervalo y dosis máxima

FLUJO TÍPICO PRN:
1. Cuidador observa síntoma en paciente
2. Sistema muestra medicamentos PRN disponibles para ese síntoma
3. Verifica criterios automáticamente (último intervalo, dosis del día)
4. Cuidador confirma administración con datos del síntoma
5. Sistema registra y actualiza estadísticas PRN
''' 